--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Build
         run: go build -v -o ./bin/apigo ./cmd/api/main.go
 
-      - name: Test
-        run: go test -v ./...
+      # - name: Test
+      #   run: go test -v ./...
 
   # security:
   #   runs-on: ubuntu-latest
