--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         run: go mod download
 
       - name: Build
-        run: go build -v -o ./bin/apigo ./cmd/api/main.go
+        run: go build -v -o ./bin/apigo ./main.go
 
       # - name: Test
       #   run: go test -v ./...
